--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,13 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    #Product repository
+    product.repository:
+        class: App\Repository\ProductRepository
+        App\Repository\ProductRepository: '@product.repository'
+
+    App\Service\ProductService:
+        class:   App\Service\ProductService
+        # factory: '@App\Service\Factory\ProductServiceFactory'
+        arguments: ['@product.repository']
