--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "node-sass": "^4.13.1",
     "popper.js": "^1.16.1",
     "sass-loader": "^7.0.1"
+  },
+  "dependencies": {
+    "sortablejs": "^1.10.2"
   }
 }
