--- a/.env
+++ b/.env
@@ -31,3 +31,20 @@ APP_SECRET=85c89f009520f353c9eef1bde5bde8ed
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://diabetigraph:q5pATIRiqoru6AF3to7i2O8uliTijI@127.0.0.1:3306/diabetigraph?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
+
+RECAPTCHA_KEY=6Lc10OcUAAAAAHRr3o19_U8LuI9YswFrWTMFlPNN
+RECAPTCHA_SECRET=6Lc10OcUAAAAAPyRAaRRc5UKK_L1mQVp6G-C9C85
+
+###> google/recaptcha ###
+# To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
+# https://www.google.com/recaptcha/admin
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET=
+###< google/recaptcha ###
