--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,18 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.10",
+        "gedmo/doctrine-extensions": "^2.4",
+        "google/recaptcha": "^1.2",
         "knplabs/knp-paginator-bundle": "^5.1",
+        "nzo/url-encryptor-bundle": "^5.0",
         "rollerworks/password-strength-validator": "^1.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
+        "symfony/error-handler": "5.0.*",
         "symfony/expression-language": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.0.*",
@@ -26,8 +31,9 @@
         "symfony/security-bundle": "5.0.*",
         "symfony/serializer-pack": "*",
         "symfony/string": "5.0.*",
+        "symfony/swiftmailer-bundle": "^3.4",
         "symfony/translation": "5.0.*",
-        "symfony/twig-pack": "*",
+        "symfony/twig-pack": "^1.0",
         "symfony/validator": "5.0.*",
         "symfony/web-link": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.7",
@@ -37,7 +43,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.14",
-        "symfony/profiler-pack": "*",
+        "symfony/profiler-pack": "^1.0",
         "symfony/test-pack": "*"
     },
     "config": {
