--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.1",
-    "@symfony/webpack-encore": "^0.28.2",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
-    "node-sass": "^4.13.1",
-    "popper.js": "^1.16.1",
-    "sass-loader": "^7.0.1"
-  },
-  "dependencies": {
-    "sortablejs": "^1.10.2"
-  }
+    "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.13.0",
+        "@symfony/webpack-encore": "^0.29.0",
+        "bootstrap": "^4.4.1",
+        "core-js": "^3.0.0",
+        "node-sass": "^4.14.0",
+        "regenerator-runtime": "^0.13.2",
+        "sass-loader": "^7.0.1",
+        "webpack-notifier": "^1.6.0"
+    },
+    "license": "UNLICENSED",
+    "private": true,
+    "scripts": {
+        "dev-server": "encore dev-server",
+        "dev": "encore dev",
+        "watch": "encore dev --watch",
+        "build": "encore production --progress"
+    },
+    "dependencies": {
+        "jquery": "^3.5.0",
+        "popper.js": "^1.16.1"
+    }
 }
