--- a/.env
+++ b/.env
@@ -39,12 +39,14 @@ DATABASE_URL=mysql://diabetigraph:q5pATIRiqoru6AF3to7i2O8uliTijI@127.0.0.1:3306/
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
 
-RECAPTCHA_KEY=6Lc10OcUAAAAAHRr3o19_U8LuI9YswFrWTMFlPNN
-RECAPTCHA_SECRET=6Lc10OcUAAAAAPyRAaRRc5UKK_L1mQVp6G-C9C85
-
 ###> google/recaptcha ###
 # To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
 # https://www.google.com/recaptcha/admin
-GOOGLE_RECAPTCHA_SITE_KEY=
-GOOGLE_RECAPTCHA_SECRET=
+GOOGLE_RECAPTCHA_SITE_KEY=6Lc10OcUAAAAAHRr3o19_U8LuI9YswFrWTMFlPNN
+GOOGLE_RECAPTCHA_SECRET=6Lc10OcUAAAAAPyRAaRRc5UKK_L1mQVp6G-C9C85
 ###< google/recaptcha ###
+
+###> symfony/mailgun-mailer ###
+# MAILER_DSN=mailgun://KEY:DOMAIN@default
+# MAILER_DSN=mailgun+smtp://USERNAME:PASSWORD@default?region=us
+###< symfony/mailgun-mailer ###
