--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
-        "@symfony/webpack-encore": "^0.29.0",
+        "@symfony/webpack-encore": "^0.30.2",
         "bootstrap": "^4.4.1",
         "core-js": "^3.0.0",
-        "node-sass": "^4.14.0",
+        "node-sass": "^4.14.1",
         "regenerator-runtime": "^0.13.2",
         "sass-loader": "^7.0.1",
         "webpack-notifier": "^1.6.0"
@@ -18,7 +18,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "bs-custom-file-input": "^1.3.4",
         "jquery": "^3.5.0",
-        "popper.js": "^1.16.1"
+        "popper.js": "^1.16.1",
+        "sortablejs": "^1.10.2"
     }
 }
