--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "bs-custom-file-input": "^1.3.4",
+        "cropperjs": "^1.5.7",
         "jquery": "^3.5.0",
         "popper.js": "^1.16.1",
         "sortablejs": "^1.10.2"
