--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=85c89f009520f353c9eef1bde5bde8ed
+APP_SECRET=0ac3b770af5b50ae15066e982f3aa4f8
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
@@ -29,7 +29,7 @@ APP_SECRET=85c89f009520f353c9eef1bde5bde8ed
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://diabetigraph:q5pATIRiqoru6AF3to7i2O8uliTijI@127.0.0.1:3306/diabetigraph?serverVersion=5.7
+DATABASE_URL=mysql://homestead:secret@192.168.10.10:3306/diabetigraph?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
@@ -47,6 +47,6 @@ GOOGLE_RECAPTCHA_SECRET=6Lc10OcUAAAAAPyRAaRRc5UKK_L1mQVp6G-C9C85
 ###< google/recaptcha ###
 
 ###> symfony/mailgun-mailer ###
-# MAILER_DSN=mailgun://KEY:DOMAIN@default
+# MAILER_DSN=mailgun://KEY:DOMAIN@default?region=us
 # MAILER_DSN=mailgun+smtp://USERNAME:PASSWORD@default?region=us
 ###< symfony/mailgun-mailer ###
