--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,12 +4,6 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: 'en'
-    app.email_noreply: noreply@noreply.com
-    app.recaptcha_key: '%env(GOOGLE_RECAPTCHA_SITE_KEY)%'
-    app.recaptcha_secret: '%env(GOOGLE_RECAPTCHA_SECRET)%'
-    google_recaptcha_site_key: '%env(GOOGLE_RECAPTCHA_SITE_KEY)%'
-    images_directory: '%kernel.project_dir%/public/uploads/images'
 
 services:
     # default configuration for services in *this* file
@@ -20,30 +14,18 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+        resource: '../src/'
+        exclude:
+            - '../src/DependencyInjection/'
+            - '../src/Entity/'
+            - '../src/Kernel.php'
+            - '../src/Tests/'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
-        resource: '../src/Controller'
+        resource: '../src/Controller/'
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    App\Service\Security\Mailer:
-        arguments:
-            $noreply: '%app.email_noreply%'
-
-    App\Service\Security\CaptchaValidator:
-        arguments:
-            $key: '%app.recaptcha_key%'
-            $secret: '%app.recaptcha_secret%'
-
-    App\EventListener\LoginListener:
-        tags:
-            - { name: 'kernel.event_listener', event: 'security.interactive_login' }
-
-    App\Service\FileUploader:
-        arguments:
-            $targetDirectory: '%images_directory%'
