--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "core-js": "^3.0.0",
         "node-sass": "^4.14.1",
         "regenerator-runtime": "^0.13.2",
+        "sass": "^1.27.0",
         "sass-loader": "^8.0.0",
+        "webpack": "^5.1.0",
         "webpack-notifier": "^1.8.0"
     },
     "license": "UNLICENSED",
