--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    locale: 'en'
+    app.email_noreply: noreply@noreply.com
+    app.recaptcha_key: '%env(RECAPTCHA_KEY)%'
+    app.recaptcha_secret: '%env(RECAPTCHA_SECRET)%'
 
 services:
     # default configuration for services in *this* file
@@ -29,3 +33,11 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Service\Security\Mailer:
+        arguments:
+            $noreply: '%app.email_noreply%'
+
+    App\Service\Security\CaptchaValidator:
+        arguments:
+            $key: '%app.recaptcha_key%'
+            $secret: '%app.recaptcha_secret%'
