--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,22 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/annotations": "^1.10",
+        "composer/package-versions-deprecated": "1.11.99.5",
+        "doctrine/annotations": "^1.13",
+        "doctrine/common": "^2",
+        "doctrine/doctrine-bundle": "^2",
+        "doctrine/doctrine-migrations-bundle": "^2",
+        "doctrine/orm": "^2",
         "friendsofsymfony/jsrouting-bundle": "^2.6",
         "gedmo/doctrine-extensions": "^2.4",
         "google/recaptcha": "^1.2",
         "knplabs/knp-paginator-bundle": "^5.1",
         "nzo/url-encryptor-bundle": "^5.0",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "ramsey/uuid-doctrine": "^1.8.1",
         "rollerworks/password-strength-validator": "^1.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
@@ -28,33 +35,43 @@
         "symfony/mailgun-mailer": "5.0.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/notifier": "5.0.*",
-        "symfony/orm-pack": "^1.0",
         "symfony/process": "5.0.*",
+        "symfony/property-access": "5.0.*",
+        "symfony/property-info": "5.0.*",
         "symfony/security-bundle": "5.0.*",
-        "symfony/serializer-pack": "*",
+        "symfony/serializer": "5.0.*",
         "symfony/string": "5.0.*",
         "symfony/swiftmailer-bundle": "^3.4",
         "symfony/translation": "5.0.*",
-        "symfony/twig-pack": "^1.0",
+        "symfony/twig-bundle": "5.0.*",
         "symfony/validator": "5.0.*",
         "symfony/web-link": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.0.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0",
         "verzeilberg/upload-images": "^0.0.1",
         "vich/uploader-bundle": "^1.13"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "symfony/debug-pack": "*",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.0.*",
+        "symfony/css-selector": "5.0.*",
+        "symfony/debug-bundle": "5.0.*",
         "symfony/maker-bundle": "^1.14",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/test-pack": "*"
+        "symfony/phpunit-bridge": "^6.1",
+        "symfony/stopwatch": "5.0.*",
+        "symfony/web-profiler-bundle": "5.0.*"
     },
     "config": {
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
