--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
-        "@symfony/webpack-encore": "^0.31.0",
+        "@symfony/webpack-encore": "^1.0.0",
         "bootstrap": "^4.4.1",
         "core-js": "^3.0.0",
-        "node-sass": "^4.14.1",
+        "node-sass": "^6.0.0",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.27.0",
-        "sass-loader": "^8.0.0",
-        "webpack": "^5.1.0",
+        "sass-loader": "^11.0.1",
+        "webpack": "^5.36.2",
         "webpack-notifier": "^1.8.0"
     },
     "license": "UNLICENSED",
@@ -20,8 +20,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "axios": "^0.19.2",
+        "axios": "^0.21.1",
         "bs-custom-file-input": "^1.3.4",
+        "copy-webpack-plugin": "^8.1.1",
         "cropperjs": "^1.5.7",
         "jquery": "^3.5.0",
         "popper.js": "^1.16.1",
