--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,6 +33,10 @@ services:
         resource: '../src/Controller/'
         tags: ['controller.service_arguments']
 
+    App\Twig\:
+        resource: '../src/Twig/'
+        tags: [ 'twig.extension']
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
     App\Service\Security\Mailer:
