--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "ramsey/uuid-doctrine": "^1.8.1",
         "rollerworks/password-strength-validator": "^1.3",
         "sensio/framework-extra-bundle": "^5.1",
+        "stfalcon/tinymce-bundle": "3.0",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
